# c_labs

./: .gitmodules
lab2/: CMakeLists.txt  main.cpp
lab2/dynamic_utils/: dynamic_utils.cpp  dynamic_utils.h
lab2/utils/: utils.cpp  utils.h
lab3/: CMakeLists.txt
lab3/include/: derivative.cpp  derivative.h
lab3/src/: main.cpp
lab3/tests/: CMakeLists.txt  tests_catch2.cpp  tests_google.cpp
lab4/: CMakeLists.txt
lab4/include/: iomanip.hpp
